--- a/debian/MySQL.env
+++ b/debian/MySQL.env
@@ -1,6 +1,6 @@
 MYSQL_USER=majesticflame
 MYSQL_PASSWORD=password
-MYSQL_HOST=localhost
+MYSQL_HOST=127.0.0.1
 MYSQL_DATABASE=ccio
 MYSQL_ROOT_PASSWORD=blubsblawoot
 MYSQL_ROOT_USER=root
